--- a/workshop/content/nationalparks-java-pipeline-codechanges-gogs.adoc
+++ b/workshop/content/nationalparks-java-pipeline-codechanges-gogs.adoc
@@ -17,17 +17,18 @@ image::images/nationalparks-pipeline-codechanges-webhook-config.png[Webhook]
 Note that the webhook URLs have placeholder text for the secret. We will get the real secret values in a moment. But for now, copy the Generic Webhook URL. Once you have the URL copied to your clipboard, navigate to the code repository
 that you have on your local Gogs:
 
-CAUTION: In the following url(s), replace `%username%` with the Git username provided to you.
+[source,bash,role=copypaste]
+----
+http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks
+----
+
+Your Gogs credentials are:
 
 [source,bash,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/%username%/nationalparks
+username: {{username}}
+password: {{GOGS_PASSWORD}}
 ----
-
-[NOTE]
-====
-The credentials for this Gogs instance are the same as for our OpenShift instance
-====
 
 Click the Settings link on the top right of the screen:
 
@@ -122,11 +123,9 @@ nationalparks-build-2   JenkinsPipeline   Git@master    Running    58 seconds ag
 Once the build and deploy has finished, verify your new image was
 automatically deployed by viewing the application in your browser:
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
 ----
 
 You should now see the new name you have set in the JSON string returned.
@@ -178,11 +177,9 @@ Warning: the following images triggers were disabled: nationalparks:latest
 Once the deploy is complete, verify that the page header is reverted to the
 original header by viewing the application in your browser.
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
 ----
 
 [NOTE]
