--- a/workshop/content/nationalparks-javascript-databases.adoc
+++ b/workshop/content/nationalparks-javascript-databases.adoc
@@ -1,4 +1,4 @@
-In this lab, we're going to deploy a MongoDB database that will be used to store
+In this section, we're going to deploy a MongoDB database that will be used to store
 the data for the `nationalparks` application. We will also connect the
 `nationalparks` service with the newly deployed MongoDB database, so that the
 `nationalparks` service can load and query the database for the corresponding
@@ -41,15 +41,14 @@ persistent storage!). The image will ensure that:
 - A user exists with the specified name
 - The user can access the specified database with the specified password
 
-In the web console in your `{{ USER_PROJECT }}` project,
-click the *Add* button and then *"Browse Catalog"*. Select the *"Databases"* category and then *"Mongo"*.
+In the Developer Perspective in your `{{ project_namespace }}` project,
+click *+Add* and then *Database*. In the Databases view, you can click *Mongo* to filter for just MongoDB.
 
 image::images/nationalparks-databases-catalog-databases.png[Data Stores]
 
-Alternatively, you could type `mongodb` in the search box. Once you have drilled down to see MongoDB, scroll down to find the *MongoDB
-(Ephemeral)* template, and select it.  You will notice that there are several
+Alternatively, you could type `mongodb` in the search box. Once you have drilled down to see MongoDB, find the *MongoDB (Ephemeral)* template and select it.  You will notice that there are multiple
 MongoDB templates available.  We do not need a database with persistent storage, so the ephemeral Mongo
-template is what you should choose.  Go ahead and select the ephemeral template and click the *Create Service Instance* button.
+template is what you should choose.  Go ahead and select the ephemeral template and click the *Instantiate Template* button.
 
 When we performed the application build, there was no template. Rather, we selected the
 builder image directly and OpenShift presented only the standard build workflow.
@@ -66,20 +65,21 @@ You can see that some of the fields say *"generated if empty"*. This is a
 feature of *Templates* in OpenShift. For
 now, be sure to use the following values in their respective fields:
 
-* `MONGODB_USER` : `mongodb`
-* `MONGODB_PASSWORD` : `mongodb`
-* `MONGODB_DATABASE`: `mongodb`
-* `MONGODB_ADMIN_PASSWORD` : `mongodb`
+* `Database Service Name` : `mongodb-nationalparks`
+* `MongoDB Connection Username` : `mongodb`
+* `MongoDB Connection Password` : `mongodb`
+* `MongoDB Database Name`: `mongodb`
+* `MongoDB Admin Password` : `mongodb`
 
-CAUTION: Make sure to have configured the *`MONGODB_DATABASE`* parameter with the appropriate value as by default it will already have a value of `sampledb`.
+CAUTION: Make sure to have configured the *`MongoDB Database Name`* parameter with the appropriate value as by default it will already have a value of `sampledb`.
 
 Once you have entered in the above information, click on *Create* to go to the next step which will allow us to add a binding.
 
 image::images/nationalparks-databases-catalog-databases-mongodb-create-bining.png[Bind Mongo]
 
-Click the *Create Service Binding* button and then *Create*. This creates a *"binding"* (as a secret) in our project that we can use in other components, such as the national parks backend, to authenticate to the database.
+Click the secret name listed under *Parameters*. The secret can be used in other components, such as the `nationalparks` backend, to authenticate to the database.
 
-Now that the connection and authentication information is in a binding in our project, we need to add it to the `nationalparks` backend. 
+Now that the connection and authentication information stored in a secret in our project, we need to add it to the `nationalparks` backend. Click the *Add Secret to Workload* button.
 
 image::images/nationalparks-databases-binding-view-secret.png[National Parks Binding]
 
@@ -87,7 +87,26 @@ Select the `nationalparks` workload and click *Save*.
 
 image::images/nationalparks-databases-binding-add-binding-to-nationalparks.png[Add binding to application]
 
-This change in configuration will trigger a new deployment of the `nationalparks` application with the binding properly injected.
+This change in configuration will trigger a new deployment of the `nationalparks` application with the environment variables properly injected.
+
+Back in the *Topology* view, click and drag the `mongodb` component into the light gray area that denotes the `workshop` application, so that all three components are contained in it.
+
+image::images/nationalparks-databases-add-mongodb-to-workshop-app.png[Add mongodb to the workshop app]
+
+Next, let's fix the labels assigned to the `mongodb` deployment. Currently, we cannot set labels when using the database template from the catalog, so we will fix these labels manually. 
+
+Like before, we'll add 3 labels:
+
+- *__app__=workshop*  (the name we will be giving to the app)
+- *__component__=nationalparks*  (the name of this deployment)
+- *__role__=database* (the role this component plays in the overall application)
+
+Execute the following command:
+[source,bash,role=execute-1]
+----
+oc label dc/mongodb svc/mongodb app=workshop component=nationalparks role=database --overwrite
+----
+
 
 == Exercise: Exploring OpenShift Magic
 As soon as we changed the *DeploymentConfiguration*, some
@@ -127,11 +146,9 @@ stood up a "new" instance.
 Now that we have a database deployed, we can again visit the `nationalparks` web
 service to query for data:
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/data/all
+http://nationalparks-{{ project_namespace }}.{{cluster_subdomain}}/ws/data/all
 ----
 
 And the result?
@@ -147,11 +164,9 @@ application and then deployed the database. Nothing actually loaded anything
 
 The application provides an endpoint to do just that:
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/data/load
+http://nationalparks-{{ project_namespace }}.{{cluster_subdomain}}/ws/data/load
 ----
 
 And the result?
@@ -167,11 +182,9 @@ That's great. Our parks map should finally work!
 NOTE: There's some errors reported with browsers like firefox 54 that don't properly parse the resulting JSON. It's
 a browser problem, and the application is working properly.
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}
+http://parksmap-{{ project_namespace }}.{{cluster_subdomain}}
 ----
 
 Hmm... There's just one thing. The main map **STILL** isn't displaying the parks.
@@ -206,7 +219,7 @@ We explored how a *Label* is just a key=value pair earlier when looking at
 arbitrary key=value pair. It could be anything.
 
 * `pizza=pepperoni`
-* `wicked=googly`
+* `pet=dog`
 * `openshift=awesome`
 
 In the case of the parks map, the application is actually querying the OpenShift
@@ -220,7 +233,7 @@ link:https://github.com/openshift-roadshow/parksmap-web/blob/{{PARKSMAP_VERSION}
 Fortunately, the command line provides a convenient way for us to manipulate
 labels. `describe` the `nationalparks` service:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc describe route nationalparks
 ----
@@ -228,10 +241,19 @@ oc describe route nationalparks
 [source,bash]
 ----
 Name:                   nationalparks
-Namespace:              {{ USER_PROJECT }}
+Namespace:              {{ project_namespace }}
 Created:                2 hours ago
-Labels:                 app=nationalparks
-Requested Host:         nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}
+Labels:                 app=workshop
+                        app.kubernetes.io/component=nationalparks
+                        app.kubernetes.io/instance=nationalparks
+                        app.kubernetes.io/name=java
+                        app.kubernetes.io/part-of=workshop
+                        app.openshift.io/runtime=java
+                        app.openshift.io/runtime-version=8
+                        component=nationalparks
+                        role=backend  
+Annotations:            openshift.io/host.generated=true                          
+Requested Host:         nationalparks-{{ project_namespace }}.{{cluster_subdomain}}
                         exposed on router router 2 hours ago
 Path:                   <none>
 TLS Termination:        <none>
@@ -243,9 +265,9 @@ Weight:                 100 (100%)
 Endpoints:              10.1.9.8:8080
 ----
 
-You see that it already has one label. Now, use `oc label`:
+You see that it already has some labels. Now, use `oc label`:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc label route nationalparks type=parksmap-backend
 ----
@@ -259,11 +281,9 @@ route.route.openshift.io/nationalparks labeled
 
 If you check your browser now:
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
-
 [source,bash]
 ----
-http://parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/
+http://parksmap-{{ project_namespace }}.{{cluster_subdomain}}/
 ----
 
 image::images/nationalparks-databases-new-parks.png[MongoDB]
