--- a/workshop/content/nationalparks-php-codechanges-gogs.adoc
+++ b/workshop/content/nationalparks-php-codechanges-gogs.adoc
@@ -8,48 +8,43 @@ hook at the OpenShift API, automated code/build/deploy pipelines can be
 achieved.
 
 == Exercise: Configuring Gogs Web Hooks
-In this lab you can use a build webhook to trigger a pipeline execution every time there is a change in the nationalparks Gogs repository. In the OpenShift web console, navigate to your `{{ project_namespace  }}` project, and then click *Builds -> Build Configs* in the left navigation. Click `nationalparks-build` build and scroll down to the Webhooks section.
+In this section you can use a build webhook to trigger a pipeline execution every time there is a change in the nationalparks Gogs repository. In the the Developer perspective in the web console, click *Builds* in the left navigation. Click the `nationalparks` build config and scroll down to the Webhooks section.
 
-On this screen you will see two webhook URLs as shown in the following image:
+On this screen you will see webhook information as shown in the following image:
 
 image::images/nationalparks-codechanges-webhook-config.png[Webhook]
 
-Note that the webhook URLs have placeholder text for the secret. We will get the real secret values in a moment. But for now, copy the Generic Webhook URL. Once you have the URL copied to your clipboard, navigate to the code repository
-that you have on your local Gogs:
-
-CAUTION: In the following url(s), replace `%username%` with the Git username provided to you.
+Click *Copy URL with Secret*. Once you have the URL copied to your clipboard, navigate to the code repository
+that you have on Gogs:
 
 [source,bash,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/%username%/nationalparks
+http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks
 ----
 
-[NOTE]
-====
-The credentials for this Gogs instance are the same as for our OpenShift instance
-====
+Your Gogs credentials are:
+
+[source,bash,role=copypaste]
+----
+username: {{username}}
+password: {{GOGS_PASSWORD}}
+----
 
 Click the Settings link on the top right of the screen:
 
 image::images/nationalparks-codechanges-gogs-settings.png[Webhook]
 
-Click on webhooks, and the on `Add Webhook` button.
+Click on *Webhooks*, then the *Add Webhook* button, and finally select *Gogs*.
 
 image::images/nationalparks-codechanges-gogs-add-webhook.png[Webhook]
 
-In the next screen, paste your link into the "URL" field. You can leave the
+In the next screen, paste your link into the "Payload URL" field. You can leave the
 secret token field blank -- the secret is already in the URL and does not need
-to be in the payload, or copy it from the URL.
-
-Now go back to the Build Config page and click on *YAML*. Copy the Generic secret value from the triggers section. 
-
-image::images/nationalparks-codechanges-gogs-copy-secret.png[Secret]
-
-Go back to Gogs and replace `<secret>` in the URL with the value you just copied.
+to be in the payload.
 
 Change the `Content Type` to `application/x-www-form-urlencoded`.
 
-Finally, click on "Add webhook".
+Finally, click on *Add Webhook*.
 
 image::images/nationalparks-codechanges-gogs-config-webhook.png[Webhook]
 
@@ -58,8 +53,7 @@ repository, a new build and deploy will occur inside of OpenShift.  Let's try
 this out.
 
 == Exercise: Using Gogs Web Hooks
-Click "Project" at the top of the Gogs page, and then "Files" towards the
-middle of the page. This is Gogs's repository view. 
+Click the *Files* tab in Gogs. This is Gogs's repository view. 
 
 CAUTION: Make sure that the drop-down menu at the upper right is set for 
 the *`master`* branch. Navigate to the
@@ -95,10 +89,10 @@ Click on Commit changes at the bottom of the screen. Feel free to enter a commit
 message.
 
 Once you have committed your changes, a *Build* should almost instantaneously be
-triggered in OpenShift. Look at the *Builds* page in the web console, or run the
+triggered in OpenShift. From the *Topology* view, click `nationalparks` and look at the *Builds* section of the *Resources* tab, or, run the
 following command to verify:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get builds
 ----
@@ -115,11 +109,9 @@ nationalparks-2   Source    Git@3b26e1a   Running    43 seconds ago
 Once the build and deploy has finished, verify your new image was
 automatically deployed by viewing the application in your browser:
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
 ----
 
 You should now see the new name you have set in the JSON string returned.
@@ -138,7 +130,7 @@ various versions of applications.
 In order to perform a rollback, you need to know the name of the *Deployment Config*
 which has deployed the application:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get dc
 ----
@@ -154,7 +146,7 @@ nationalparks        9          1         1         config,image(nationalparks:m
 ----
 Now run the following command to rollback the latest code change:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc rollback nationalparks
 ----
@@ -171,11 +163,9 @@ Warning: the following images triggers were disabled: nationalparks:live
 Once the deploy is complete, verify that the page header is reverted to the
 original header by viewing the application in your browser.
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
 ----
 
 [NOTE]
@@ -184,7 +174,7 @@ Automatic deployment of new images is disabled as part of the rollback
 to prevent unwanted deployments soon after the rollback is complete. To re-enable
 the automatic deployments run this:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc set triggers dc/nationalparks --auto
 ----
@@ -199,9 +189,9 @@ even if we are going "back".
 
 So, if we want to return to the "new code" version, that is deployment #4.
 
-[source,bash]
+[source,bash,role=execute-1]
 ----
-$ oc rollback nationalparks-4
+oc rollback nationalparks-4
 ----
 
 And you will see the following:
@@ -212,5 +202,5 @@ Warning: the following images triggers were disabled: nationalparks
   You can re-enable them with: oc set triggers dc/nationalparks --auto
 ----
 
-Cool! Once the *rollback* is complete, verify you again see "OpenShift
+Cool! Once the *rollback* is complete, verify you again see "Amazing
 National Parks".
