--- a/workshop/content/nationalparks-php.adoc
+++ b/workshop/content/nationalparks-php.adoc
@@ -64,11 +64,17 @@ application code!
 The repository that we are going to use is already cloned in the internal Gogs repository
 and located at the following URL:
 
-CAUTION: In the following url(s), replace `%username%` with the Gogs username provided to you. Your Gogs credentials are the same as your OpenShift credentials.
+Your Gogs credentials are:
+
+[source,bash,role=copypaste]
+----
+username: {{username}}
+password: {{GOGS_PASSWORD}}
+----
 
 [source,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/%username%/nationalparks.git
+http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks.git
 ----
 
 Later in the lab, we want you to make a code change and then rebuild your
@@ -100,11 +106,9 @@ image::images/nationalparks-php-new-php-service.png[Add PHP]
 Click on the *Create Application* button and then enter a name and a Git repository URL. For the name, enter `nationalparks`,
 and for the Git repository URL, enter:
 
-CAUTION: In the following url(s), replace `%username%` with the Git username provided to you.
-
 [source,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/%username%/nationalparks.git
+http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks.git
 ----
 
 NOTE: All of these runtimes shown are made available via *Templates* and
@@ -180,17 +184,15 @@ Where you should see something like the following:
 [source,bash]
 ----
 NAME            HOST/PORT                                                   PATH      SERVICES        PORT       TERMINATION
-nationalparks   nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}             nationalparks   8080-tcp
-parksmap        parksmap-{{ project_namespace  }}.{{ROUTER_ADDRESS}}                  parksmap        8080-tcp
+nationalparks   nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}             nationalparks   8080-tcp
+parksmap        parksmap-{{ project_namespace  }}.{{cluster_subdomain}}                  parksmap        8080-tcp
 ----
 
 In the above example, the URL is:
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}
 ----
 
 Since this is a back-end application, it doesn't actually have a web interface.
@@ -198,11 +200,9 @@ However, it can still be used with a browser. All backends that work with the pa
 frontend are required to implement a `/ws/info/` endpoint. To test, the
 complete URL to enter in your browser is:
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
-http://nationalparks-{{ project_namespace  }}.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
 ----
 
 WARNING: The trailing slash is *required*.
