--- a/workshop/content/nationalparks-java-codechanges-gogs.adoc
+++ b/workshop/content/nationalparks-java-codechanges-gogs.adoc
@@ -38,9 +38,9 @@ Click on webhooks, and the on `Add Webhook` button.
 
 image::images/nationalparks-codechanges-gogs-add-webhook.png[Webhook]
 
-In the next screen, paste your link into the "URL" field. You can leave the
+In the next screen, paste your link into the "Payload URL" field. You can leave the
 secret token field blank -- the secret is already in the URL and does not need
-to be in the payload, or copy it from the URL.
+to be in the payload.
 
 Change the `Content Type` to `application/x-www-form-urlencoded`.
 
@@ -93,7 +93,7 @@ Once you have committed your changes, a *Build* should almost instantaneously be
 triggered in OpenShift. Look at the *Builds* page in the web console, or run the
 following command to verify:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get builds
 ----
@@ -109,8 +109,6 @@ nationalparks-2   Source    Git@3b26e1a   Running    43 seconds ago
 
 Once the build and deploy has finished, verify your new image was
 automatically deployed by viewing the application in your browser:
-
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
@@ -133,7 +131,7 @@ various versions of applications.
 In order to perform a rollback, you need to know the name of the *Deployment Config*
 which has deployed the application:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get dc
 ----
@@ -149,7 +147,7 @@ nationalparks        9          1         1         config,image(nationalparks:m
 ----
 Now run the following command to rollback the latest code change:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc rollback nationalparks
 ----
@@ -166,8 +164,6 @@ Warning: the following images triggers were disabled: nationalparks:live
 Once the deploy is complete, verify that the page header is reverted to the
 original header by viewing the application in your browser.
 
-CAUTION: In the following url(s), replace `{{ project_namespace  }}` with the project provided to you.
-
 [source,bash,role=copypaste]
 ----
 http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
@@ -179,7 +175,7 @@ Automatic deployment of new images is disabled as part of the rollback
 to prevent unwanted deployments soon after the rollback is complete. To re-enable
 the automatic deployments run this:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc set triggers dc/nationalparks --auto
 ----
@@ -194,7 +190,7 @@ even if we are going "back".
 
 So, if we want to return to the "new code" version, that is deployment #4.
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc rollback nationalparks-4
 ----
