--- a/workshop/content/nationalparks-java-databases.adoc
+++ b/workshop/content/nationalparks-java-databases.adoc
@@ -104,7 +104,7 @@ Like before, we'll add 3 labels:
 Execute the following command:
 [source,bash,role=execute-1]
 ----
-oc label dc/mongodb svc/mongodb app=workshop component=nationalparks role=database --overwrite
+oc label dc/mongodb-nationalparks svc/mongodb app=workshop component=nationalparks role=database --overwrite
 ----
 
 == Exercise: Exploring OpenShift Magic
@@ -279,8 +279,6 @@ route.route.openshift.io/nationalparks labeled
 ----
 
 If you check your browser now:
-
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
